<resources>
    <string name="app_name">Lifecycle</string>
    <string name="hint">Input</string>
    <string name="hello_b">Hello, I am B</string>
    <string name="hello_c">I look like a dialog most certainly but are you sure I am a dialog?</string>
    <string name="hello_a">Hello, I am A</string>
    <string name="initial_value">1</string>
    <string name="action_activity">Launch Activity B</string>
    <string name="action_alert_dialog">Launch Alert Dialog</string>
    <string name="action_dialog_fragment">Launch Dialog Fragment</string>
    <string name="action_fragment_lifecycle">Show Fragment Lifecycle</string>
    <string name="message_activity">Hi, I am the activity who contains the fragment below</string>
    <string name="message_fragment">Hello there, I am the fragment you heard so much about!</string>
    <string name="action_combined_lifecycle">Combined Lifecycle</string>
    <string name="action_fragments_xml">Show Fragments added in XML</string>
    <string name="fragment_xml_a">Hello I am Fragment A and I will be added to the Activity in XML</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_xml_b">Hello I am Fragment B and I will be added to the Activity through XML</string>
    <string name="fragment_code_a">Hi I am Fragment A and I will be added to the Activity through code</string>
    <string name="fragment_code_b">Hi I am Fragment B and I will be added to the Activity through code</string>
    <string name="action_fragments_code">Show Fragments Added in Code</string>
</resources>
